# QtOpenGLQuadPlayers

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  FrameQueue.h  GLViewport.cpp  GLViewport.h  MediaController.cpp  MediaController.h  MediaIcons.h  README.md  ViewportPane.h
.github/workflows/: ci.yml
src/: DecodeWorker.cpp  DecodeWorker.h  GLViewport.cpp  GLViewport.h  MainWindow.cpp  MainWindow.h  MediaIcons.cpp  ViewportPane.cpp  main.cpp
